--- a/AppModelv2-WebApp-OpenIDConnect-DotNet/Web.config
+++ b/AppModelv2-WebApp-OpenIDConnect-DotNet/Web.config
@@ -10,11 +10,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="ClientId" value="Enter_the_Application_Id_here" />
+    <add key="ClientId" value="8cb81412-4ad8-4a1c-ab23-9eeeedac9468" />
     <add key="Tenant" value="common" />
     
     <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />    
-    <add key="redirectUri" value="https://localhost:44368/" />
+    <add key="redirectUri" value="https://as17122022.azurewebsites.net" />
 
     
   </appSettings>
